<resources>
    <string name="app_name">My CV</string>
    <string name="msg">What is your nickname?</string>
    <string name="user_input_placeholder">Type your nickname here</string>
    <string name="submit_button">Show</string>
    <string name="cv">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis elit vitae odio lobortis aliquam. Nulla consectetur eros a interdum bibendum. Nunc et nunc et nisi malesuada posuere quis nec diam. Fusce convallis, risus sed aliquam blandit, urna libero vehicula purus, eget volutpat tortor elit sed metus. Ut at semper libero. Aliquam erat volutpat. Quisque sit amet vestibulum nisl. Sed molestie ante quis vulputate bibendum. Maecenas efficitur aliquam sem, at aliquet ipsum mollis vel. Pellentesque turpis libero, scelerisque eget semper ac, varius hendrerit libero. Duis vel ligula sed dolor tincidunt dapibus eu quis ante. Nam eu orci iaculis, interdum orci non, euismod lectus. Suspendisse tincidunt posuere risus at ultricies. Quisque malesuada consequat cursus.
Donec sit amet felis non tellus luctus interdum laoreet ut risus. Proin venenatis, diam eget tincidunt vestibulum, nibh mi pulvinar eros, et pretium nibh metus at purus. Pellentesque tempor aliquet neque, sed placerat sapien rhoncus id. Suspendisse a mi sed nisl vulputate scelerisque ut ut sapien. Maecenas ligula lorem, varius sit amet interdum non, vestibulum id diam. Quisque semper porttitor sapien et consequat. Sed erat eros, tempor at magna non, consectetur pulvinar massa. Aenean vitae nunc sapien. Pellentesque tincidunt odio sit amet pretium fermentum. Curabitur eget tristique erat, ut euismod nulla. Nunc pharetra, quam in fringilla efficitur, tellus odio cursus quam, id sollicitudin lorem elit vitae diam. Sed erat sapien, efficitur accumsan eleifend quis, fermentum quis orci. Morbi ut dictum mi. Duis nulla nibh, lacinia eget arcu eu, vulputate venenatis orci.
Morbi vehicula eget augue vel luctus. Integer accumsan, felis sed bibendum blandit, ante arcu aliquam nulla, ut faucibus elit justo sit amet arcu. Morbi sagittis tortor eu est feugiat euismod. Sed nec diam ultricies, ullamcorper ipsum sed, volutpat dui. Nullam luctus suscipit ex id venenatis. Integer posuere dolor erat, ac pretium nulla hendrerit id. Praesent laoreet volutpat iaculis. Maecenas hendrerit lacus facilisis luctus iaculis.</string>
    <string name="user_name">Jonatas Ribeiro</string>
</resources>