<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="start"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp"

        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_name"
            android:textSize="34sp"
        />

        <TextView
            android:id="@+id/textView_ask_for_nickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg"
            android:textSize="20sp"
        />

        <EditText
            android:id="@+id/editText_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/user_input_placeholder"
            android:textSize="20sp"
        />

        <Button
            android:id="@+id/show_CV_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit_button"

            />

        <ScrollView
            android:id="@+id/show_CV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/textView_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cv"
                android:textAlignment="textStart"
                android:visibility="invisible"
                android:lineSpacingMultiplier="1.2"
            />
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>